# agata

./: .env.example  .gitignore  API_CLIENT.md  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  gen_session.py  pyproject.toml
app/: config.py  main.py  utils.py
app/api/: routes.py
app/services/: userbot.py
